added one new endpoint for better integration for frontend
